# aleo-agent

./: Cargo.toml  README.md
aleo-agent/: Cargo.toml
aleo-agent/src/: agent.rs  lib.rs
examples/transfer/: Cargo.toml
examples/transfer/src/: main.rs
src/: agent.rs  chain.rs  deploy.rs  lib.rs  main.rs  program.rs
tests/: transfer_tests.rs
